<resources>
    <string name="app_name">newAccount</string>
    <string name="username">Username</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="enter_a_password_below">Enter a password below</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_your_novigrad_address">Enter your Novigrad address</string>
    <string name="date_of_birth_yyyy_mm_dd">Date of Birth (yyyy/mm/dd)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="street_address">Street Address</string>
    <string name="street_address_continued_optional">Street Address Continued (optional)</string>
    <string name="municipality">Municipality</string>
    <string name="postal_code">Postal Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm">Confirm</string>
    <string name="next">Next</string>
    <string name="sign_up">Sign Up</string>
    <string name="employee_portal">Employee Portal</string>
    <string name="registering_as_an_employee">Registering as an employee?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="ready_to_make_a_new_user_account">Ready to make a new user account?</string>
    <string name="services_name">Services Available</string>
    <string name="edit">Edit Service</string>
    <string name="delete">Delete</string>
    <string name="RInfo">Required Information</string>
    <string name="RDocs">Required Documents</string>
    <string name="name">Service Name</string>
    <string name="price">Price</string>
    <string name="license_type">License Type</string>
    <string name="customer_photo">Customer Photo</string>
    <string name="proof_residence">Proof of Residence</string>
    <string name="proof_status">Proof of Status</string>
    <string name="email">email</string>
    <string name="userName">username</string>
    <string name="Role">role</string>
    <string name="users_stored">Users Stored</string>
    <string name="hold_down_on_a_user_to_delete">Hold down on a user to delete.</string>
    <string name="string_hyphen"> : </string>
    <string name="start_time_00_00">Start time (00:00)</string>
    <string name="end_time">End time (00:00)</string>


</resources>