<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/dob"
            android:layout_width="234dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/date_of_birth_yyyy_mm_dd"
            android:inputType="date" />

        <EditText
            android:id="@+id/streetAddress"
            android:layout_width="323dp"
            android:layout_height="42dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/street_address"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/municipality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/municipality"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/postCode"
            android:layout_width="211dp"
            android:layout_height="46dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/postal_code"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/addressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/enter_your_novigrad_address" />

        <EditText
            android:id="@+id/streetAddress2"
            android:layout_width="325dp"
            android:layout_height="42dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/street_address_continued_optional"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/confirm" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>